--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.3.0",
+    "@mui/icons-material": "^6.4.1",
+    "@mui/material": "^6.4.1",
+    "@mui/styles": "^6.4.1",
     "@pdftron/pdfnet-node": "^11.2.0",
     "@pdftron/webviewer": "^11.2.0",
     "buffer": "^6.0.3",
