--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto-browserify": "^3.12.1",
     "file-saver": "^2.0.5",
     "node-polyfill-webpack-plugin": "^4.1.0",
+    "pdf-esign-demo": "file:",
     "pkcs11js": "^2.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "react-app-rewired": "^2.2.1",
     "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
