--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.1",
-    "@mui/material": "^6.4.1",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "@mui/styles": "^6.4.1",
     "@pdftron/pdfnet-node": "^11.2.0",
-    "@pdftron/webviewer": "^11.2.0",
+    "@pdftron/webviewer": "^11.3.0",
     "buffer": "^6.0.3",
     "cra-template": "1.2.0",
     "crypto-browserify": "^3.12.1",
     "file-saver": "^2.0.5",
     "node-polyfill-webpack-plugin": "^4.1.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.8.69",
     "pkcs11js": "^2.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
